--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,380 +1,486 @@
 @font-face {
-    font-family: 'BeVietnam';
-    src: url('../utils/fonts/BeVietnamPro-Regular.ttf') format('truetype');
+  font-family: "BeVietnam";
+  src: url("../utils/fonts/BeVietnamPro-Regular.ttf") format("truetype");
 }
 
-html,body{
-    background-color: #001233;
-    width: 100%;
-    height: 100%;
-    font-family: 'BeVietnam';
-    margin: 0;
-    padding: 0;
-}
+html,
+body {
+  background-color: #001233;
+  width: 100%;
+  height: 100%;
+  font-family: "BeVietnam";
+  margin: 0;
+  padding: 0;
+  animation: backgroundAnimation 10s 1;
+  }
+  @keyframes backgroundAnimation {
+  0% {
+  background-color: #001233;
+  }
+  30% {
+  background-color: #5a6c8d;
+  }
+  100% {
+  background-color: #001233;
+  }
+  }
+
 .trapezoid1 {
-    height: 95px;
-    width: 550px;
-    background-color: #F55759;
-    border-radius: 0px 0px 50px 50px;
-    margin: 0px 0px 0px 200px;
+  height: 95px;
+  width: 550px;
+  background-color: #f55759;
+  border-radius: 0px 0px 50px 50px;
+  margin: 0px 0px 0px 200px;
 }
 .trapezoid2 {
-    height: 95px;
-    width: 550px;
-    background-color: #F55759;
-    border-radius: 50px 50px 0px 0px;
-    margin: 0px 0px 0px 200px;
+  height: 95px;
+  width: 550px;
+  background-color: #f55759;
+  border-radius: 50px 50px 0px 0px;
+  margin: 0px 0px 0px 200px;
 }
-.login{
-    background-color: white;
-    width: 360px;
-    height: 570px;
-    border-radius: 50px;
-    margin: 30px 10px 30px 245px;
-    padding: 50px;
-    font-family: 'BeVietnam';
-    color: #F55759;
-    font-size: 24px;
+.login {
+  background-color: white;
+  width: 360px;
+  height: 570px;
+  border-radius: 50px;
+  margin: 30px 10px 30px 245px;
+  padding: 50px;
+  font-family: "BeVietnam";
+  color: #f55759;
+  font-size: 24px;
 }
-.login input{
-    width: 350px;
-    height: 40px;
-    background-color: #ECDCC5;
-    border: none;
-    font-size: 23px;
-    color: #001233;
-
+.login input {
+  width: 350px;
+  height: 40px;
+  background-color: #ecdcc5;
+  border: none;
+  font-size: 23px;
+  color: #001233;
 }
-.login username{
-    margin-top: 70px;
+.login username {
+  margin-top: 70px;
 }
-.login password{
-    margin-top: 50px;
+.login password {
+  margin-top: 50px;
 }
-.new-user{
-    font-size: 18px;
-    text-decoration: underline;
-    font-style: italic;
-    display: block;
-    margin-top: 15px;
-    color: #F55759;
+.new-user {
+  font-size: 18px;
+  text-decoration: underline;
+  font-style: italic;
+  display: block;
+  margin-top: 15px;
+  color: #f55759;
 }
-.login-button{
-    background-color: #001233;
-    color: #F55759;
-    display: block;
-    font-size: 22px;
-    padding: 10px 40px;
-    border: none;
-    border-radius: 20px;
-    margin-top: 80px;
-    margin-left: 100px;
+.login-button {
+  background-color: #001233;
+  color: #f55759;
+  display: block;
+  font-size: 22px;
+  padding: 10px 40px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 80px;
+  margin-left: 100px;
 }
-.forgot-password{
-    color: #F55759;
-    font-size: 18px;
-    font-style: italic;
-    text-decoration: underline;
-    margin-left: 97px;
+.forgot-password {
+  color: #f55759;
+  font-size: 18px;
+  font-style: italic;
+  text-decoration: underline;
+  margin-left: 97px;
 }
-.login-column{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 450px; 
-    min-height: 100%;
+.login-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 450px;
+  min-height: 100%;
 }
-.logo{
-    display: block;
-    width: 350px;
-    margin-top: 70px;
-    margin-left: 50px;
+.logo {
+  display: block;
+  width: 350px;
+  margin-top: 70px;
+  margin-left: 50px;
 }
-.sample{
-    display: block;
-    border: 5px solid #F55759;
-    border-radius: 50px;
+.sample {
+  display: block;
+  border: 5px solid #f55759;
+  border-radius: 50px;
 }
-.desc{
-    font-size: 20px;
-    line-height: 35px;
-    color: #D8D2C4;
-    width: 500px;
+.desc {
+  font-size: 20px;
+  line-height: 35px;
+  color: #d8d2c4;
+  width: 500px;
 }
 
 /*REGISTER SCREEN*/
 
-.register{
-    background-color: white;
-    width: 360px;
-    height: 590px;
-    border-radius: 50px;
-    margin: 30px 10px 30px 245px;
-    padding: 40px 50px;
-    color: #F55759;
-    font-size: 24px;
+.register {
+  background-color: white;
+  width: 360px;
+  height: 590px;
+  border-radius: 50px;
+  margin: 30px 10px 30px 245px;
+  padding: 40px 50px;
+  color: #f55759;
+  font-size: 24px;
 }
-.register p{
-    margin: 3px;
+.register p {
+  margin: 3px;
 }
-.register input{
-    width: 350px;
-    height: 37px;
-    background-color: #ECDCC5;
-    border: none;
-    margin: 1px;
-    font-size: 23px;
-    color: #001233;
+.register input {
+  width: 350px;
+  height: 37px;
+  background-color: #ecdcc5;
+  border: none;
+  margin: 1px;
+  font-size: 23px;
+  color: #001233;
 }
-.old-user{
-    color: #F55759;
-    font-size: 18px;
-    text-decoration: underline;
-    font-style: italic;
-    display: block;
-    margin-top: 5px;
+.old-user {
+  color: #f55759;
+  font-size: 18px;
+  text-decoration: underline;
+  font-style: italic;
+  display: block;
+  margin-top: 5px;
 }
-.signup-button{
-    background-color: #001233;
-    color: #F55759;
-    display: block;
-    font-size: 22px;
-    padding: 10px 40px;
-    border-radius: 20px;
-    margin-top: 20px;
-    margin-left: 100px;
-    border: none;
+.signup-button {
+  background-color: #001233;
+  color: #f55759;
+  display: block;
+  font-size: 22px;
+  padding: 10px 40px;
+  border-radius: 20px;
+  margin-top: 20px;
+  margin-left: 100px;
+  border: none;
 }
 
-.error-message{
-    font-size: 14px;
+.error-message {
+  font-size: 14px;
 }
 
 .error-message-small {
-    padding-top: 10px;
-    font-size: 14px;
+  padding-top: 10px;
+  font-size: 14px;
 }
 /*Forgot Password*/
-.forgotpassword{
-    background-color: white;
-    width: 360px;
-    height: 299px;
-    border-radius: 50px;
-    margin: 165.5px 10px 165.5px 245px;
-    padding: 50px;
-    color: #F55759;
+.forgotpassword {
+  background-color: white;
+  width: 360px;
+  height: 299px;
+  border-radius: 50px;
+  margin: 165.5px 10px 165.5px 245px;
+  padding: 50px;
+  color: #f55759;
 }
-.forgotpass-buttons a, .forgot-pass-submit{
-    background-color: #001233;
-    color: #F55759;
-    display: inline-block;
-    font-size: 22px;
-    width: 150px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 20px;
-    margin-left: 15px;
-    margin-top: 20px;
-    border: none;
-    text-align: center;
-    text-decoration: none;
+.forgotpass-buttons a,
+.forgot-pass-submit {
+  background-color: #001233;
+  color: #f55759;
+  display: inline-block;
+  font-size: 22px;
+  width: 150px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 20px;
+  margin-left: 15px;
+  margin-top: 20px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
 }
 
-.forgotpassDisc{
-    margin-top: 10px;
-    font-size: 18px;
+.forgotpassDisc {
+  margin-top: 10px;
+  font-size: 18px;
 }
-.forgotEmail{
-    margin-top: 20px;
-    font-size: 30px;
+.forgotEmail {
+  margin-top: 20px;
+  font-size: 30px;
 }
-.forgot-pass-email{
-    width: 350px;
-    height: 40px;
-    background-color: #ECDCC5;
-    border: none;
-    font-size: 23px;
-    color: #001233;
+.forgot-pass-email {
+  width: 350px;
+  height: 40px;
+  background-color: #ecdcc5;
+  border: none;
+  font-size: 23px;
+  color: #001233;
 }
 /* HOME SCREEN */
 .menu-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #F55759;
-    padding: 10px;
+  background-color: #001233;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #f55759;
+  padding: 10px;
 }
 
 .home-logo {
-    width: 150px;
+  width: 150px;
 }
 
 .button-group {
-    display: flex;
-    gap: 15px;
+  display: flex;
+}
+
+.DownloadButt{  
+  text-align: center;
+  padding: 10px 20px;
+  background-color: #f55759;
+  margin-top: 50px;
+  border-radius: 20px;
+  font-weight: bold;
+  font-family: "BeVietnam";
+  border: 2px solid white;
+  text-decoration: none;
+  color: #001233;
 }
 
 .menu-bar button {
-    background-color: #001233;
-    color: #F55759;
-    border: none;
-    font-size: 15px;
-    font-weight: bolder;
-    height: 40px;
-    width: 150px;
-    border-radius: 10px;
+  background-color: #001233;
+  color: #f55759;
+  border: none;
+  font-size: 18px;
+  font-weight: bolder;
+  height: 40px;
+  width: 150px;
+  border-radius: 10px;
 }
-.button-group current{
-    border-width: 1px;
-    border-color: #F55759;
+.button-group current {
+  border-width: 1px;
+  border-color: #f55759;
 }
-.img{
-    display: none;
+.img {
+  display: none;
 }
 .photo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .imglbl {
-    background-color: #ECDCC5;
-    width: 600px;
-    height: 500px;
-    border-radius: 50px;
-    margin-top: 100px;
-    margin-right: 200px;
-    margin-left: 80px;
-    padding: 40px 50px;
-    color: #F55759;
-    font-size: 24px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    border-color: #F55759;
-    border-style: dashed;
+  background-color: #ecdcc5;
+  width: 400px;
+  height: 300px;
+  border-radius: 50px;
+  margin-top: 270px;
+  margin-right: 200px;
+  margin-left: 80px;
+  padding: 50px 50px;
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-color: #f55759;
+  border-style: dashed;
+}
+
+  
+.imglbl .uploaded-image-preview {
+  display: block;
+  margin: auto;
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .imgicon {
-    margin-left: 50px;
-    width: 450px;
+  margin-left: 50px;
+  width: 450px;
 }
 
-.home-column{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    min-height: 100%;
-}
-.home-describe{
-    margin-top: 200px ;
-    margin-left:200px;
-}
-.home-title{
-    font-size: 80px;
-    font-weight: bolder;
-    color: #F55759;
-    width: 700px;
-}
-.home-desc{
-    color: #ECDCC5;
-    font-size: 25px;
+.home-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-color: #f55759;
 }
 
-.photo button{
-    width: 150px;
-    height: 50px;
-    background-color: #F55759;
-    margin-top: 20px;
-    border-radius: 20px;
-    font-weight: bold;
-    font-family: 'BeVietnam';
+.home-describe {
+  margin-top: 200px;
+  margin-left: 200px;
 }
-.upload-status{
-    background-color: #ECDCC5;
-    width: 300px;
-    height: 100px;
-    padding: 10px 130px;
-    border-radius: 20px;
-    border-color: #F55759;
-    border-style: dashed;
+.home-title {
+  font-size: 80px;
+  font-weight: 1000;
+  color: #f55759;
+  width: 700px;
 }
-.Upscale{
-    margin-right: 120px;
-    margin-bottom: 30px;
+.home-desc {
+  color: #ecdcc5;
+  font-size: 25px;
+  margin-bottom: 60px;
+  width: 700px;
 }
 
-.image-container{
-    background-color: white;
-    width: 360px;
-    height: 590px;
-    border-radius: 50px;
-    margin: 30px 10px 30px 245px;
-    padding: 40px 50px;
-    font-size: 24px;
+.photo button {
+  width: 150px;
+  height: 50px;
+  background-color: #f55759;
+  margin-top: 20px;
+  border-radius: 20px;
+  font-weight: bold;
+  font-family: "BeVietnam";
+  margin-bottom: 30px;
+}
+.upload-status {
+  background-color: #ecdcc5;
+  width: 300px;
+  height: 100px;
+  padding: 10px 130px;
+  border-radius: 20px;
+  border-color: #f55759;
+  border-style: dashed;
+}
+.Upscale {
+  margin-right: 120px;
+  margin-bottom: 30px;
+}
+
+.Upscale1{
+  margin-top: 400px;
+  margin-left: 80px;
+
+}
+
+.image-container {
+  display: hide;
+  justify-content: space-between;
 }
 
 
+.image-column {
+  flex-basis: 45%;
+}
 
+#upscaled-image img {
+  width: 500px;
+  height: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.upload-title {
+  color: #ecdcc5;
+  font-size: 24px;
+  margin-top: 118px;
+}
+.upscale-title {
+  color: #ecdcc5;
+  font-size: 24px;
+  padding: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  width: 100%;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  }
+
+  .upscaled-image{
+    border: 2px solid #f55759;
+    
+  }
+
+.upscale-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-left: 50px;
+}
+
+.uploaded-image-container{
+  background-color: #ecdcc5;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+.uploaded-image-container{
+  background-color: #ecdcc5;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+.upscaled-image-container{
+  background-color: #ecdcc5;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
 
 
 
 /*GO PREMIUM SCREEN*/
-.prem-free, .prem-monthly, .prem-yearly {
-    background-color: #ECDCC5;
-    width: 360px;
-    height: 630px;
-    border-color: #F55759;
-    border-style: dashed;
-    border-radius: 22px;
-    margin: 0 auto;
+.prem-free,
+.prem-monthly,
+.prem-yearly {
+  background-color: #ecdcc5;
+  width: 360px;
+  height: 630px;
+  border-color: #f55759;
+  border-style: dashed;
+  border-radius: 22px;
+  margin: 0 auto;
 }
 
 .prem-column {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 20px;
-    min-height: 100%;
-    margin: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 20px;
+  min-height: 100%;
+  margin: 20px;
 }
 
-.prem-title{
-    color: #F55759;
-    font-size: 70px;
-    text-align: center;
-    line-height: 70px;
-    margin-top:50px;
-    margin-bottom: 20px;
+.prem-title {
+  color: #f55759;
+  font-size: 70px;
+  text-align: center;
+  line-height: 70px;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
-.prem-desc{
-    color: #ECDCC5;
-    font-size: 25px;
-    width: 900px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 100px;
+.prem-desc {
+  color: #ecdcc5;
+  font-size: 25px;
+  width: 900px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
 }
-.prem-column p{
-    text-align: center;
-    font-size: 24px;
+.prem-column p {
+  text-align: center;
+  font-size: 24px;
 }
-.prem-column button{
-    width: 150px;
-    height: 50px;
-    border-radius: 20px;
-    border-width: 1px;
-    border-color: black;
+.prem-column button {
+  width: 150px;
+  height: 50px;
+  border-radius: 20px;
+  border-width: 1px;
+  border-color: black;
 }
 .prem-monthly button,
 .prem-yearly button {
-    margin-top: auto;
-    margin-bottom: 50px;
+  margin-top: auto;
+  margin-bottom: 50px;
 }
 .prem-monthly,
 .prem-yearly {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
