--- a/templates/home_screen.html
+++ b/templates/home_screen.html
@@ -1,54 +1,168 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PixelPic Home</title>
-    <link rel="stylesheet" href="static/css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="static/css/styles.css" />
+  </head>
+  <body>
     <div class="menu-bar">
-        <img class="home-logo" src="../static/utils/images/pixelpic_logo.png" alt="Pixel Pic">
-        <div class="button-group">
-            {% if user_logged_in %}
-                <button class="current">Home</button>
-                <a href="{{ url_for('go_premium') }}"><button>Go Premium</button></a>
-                <a href="{{ url_for('logout') }}"><button>Logout</button></a>
-            {% else %}
-                <button class="current">Home</button>
-                <a href="{{ url_for('login') }}"><button>Login</button></a>
-                <a href="{{ url_for('register') }}"><button>Register</button></a>
-            {% endif %}
-        </div>
+      <img class="home-logo" src="../static/utils/images/pixelpic_logo.png" alt="Pixel Pic">
+      <div class="button-group">
+        {% if user_logged_in %}
+        <button class="current">Home</button>
+        <a href="{{ url_for('go_premium') }}"><button>Go Premium</button></a>
+        <a href="{{ url_for('logout') }}"><button>Logout</button></a>
+        {% else %}
+        <button class="current">Home</button>
+        <a href="{{ url_for('login') }}"><button>Login</button></a>
+        <a href="{{ url_for('register') }}"><button>Register</button></a>
+        {% endif %}
+      </div>
     </div>
+
     <div class="home-column">
-        <section class="home-describe">
-            <p class="home-title">UPSCALE YOUR IMAGE</p>
-            <p class="home-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
+      <section class="home-describe">
+        <p class="home-title">UPSCALE YOUR IMAGE</p>
+        <p class="home-desc">
+          Revitalize your visuals: Elevate low-resolution images with AI-powered quality enhancer
+        </p>
 
-        <section>
-            <div class="photo">
-                <input class="img" type="file" id="file" accept="image/*" onchange="updateUploadStatus()">
-                <label class="imglbl" for="file">
-                    <img class="imgicon" src="../static/utils/images/Imgicon.png">
-                </label>
-                <div class="Upscale">
-                    <button class="UpscaleButt" onclick="upscaleImage()">UPSCALE</button>
-                    <span class="upload-status"></span>
-                </div>
-                <div id="image-container">
-                    <!-- Empty div -->
-                </div>
+        <div id="uploaded-column" style="display:none">
+          <div class="uploaded-image">
+          <div id="uploaded-image-container" style="display: none;"></div>
+          </div>
+          </div>
 
-                <div class="Upscale1">
-                    <button class="DownloadButt" onclick="downloadImage()">DOWNLOAD</button>
-                </div>
 
-                
+          </section>
+          
+          <section>
+          <div class="photo">
+          <input
+          class="img"
+          type="file"
+          id="file"
+          accept="image/*"
+          onchange="updateUploadStatus()"
+          />
+          <label class="imglbl" for="file">
+          <img class="uploaded-image-preview" src="../static/utils/images/Imgicon.png" />
+          <div id="image-container" style="display: none;">
+            <!-- Empty div -->
             </div>
-        </section>
-        <script src="/static/JS/main.js"></script>
-    </div>
-</body>
+          </label>
+          
+          
+          
+          <div id="upload-buttons" style="display: none">
+          <div class="Upscale">
+          <button class="UpscaleButt" id="upscale-button">UPSCALE</button>
+          <span class="upload-status"></span>
+          </div>
+          </div>
+
+            </div>
+          </section>
+        </div>
+        <div id=".home-column" class="upscale-grid">
+          <div id="upscaled-column" style="display: none">
+            <div class="upscaled-image" style="margin-top: 20px;">
+            <p class="upscale-title" style="display:block;">UPSCALED IMAGE</p>
+            <div id="upscaled-image-container"></div>
+            </div>
+            </div>
+            <div id="download-button" style="display: none;">
+              <div class="Upscale1">
+              <a id="download-link" class="DownloadButt" download="upscaled_image.jpg" href="#" onclick="downloadImage()">
+              DOWNLOAD
+              </a>
+              </div>
+              </div>
+        </div>
+          
+        
+          
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+          <script>
+          $(document).ready(function () {
+          // Function to update the uploaded image preview
+          function updateImagePreview(input) {
+          if (input.files && input.files[0]) {
+          var reader = new FileReader();
+          reader.onload = function (e) {
+          $('.uploaded-image-preview').attr('src', e.target.result);
+          };
+          reader.readAsDataURL(input.files[0]);
+          }
+          }
+          
+          // Update the image preview when a file is selected
+          $('#file').change(function () {
+          updateImagePreview(this);
+          });
+          
+          // Rest of your code
+          $("#upscale-button").click(function () {
+          var imageData = localStorage.getItem("imageData");
+          console.log(imageData);
+          if (uploadedImage && imageData != null) {
+          $.ajax({
+          url: "/upscale",
+          method: "POST",
+          data: {
+          imageData: imageData,
+          },
+          success: function (response) {
+          var element = document.getElementById("upscaled-column");
+          element.style.display = "block";
+          var imageSrc = "data:image/jpeg;base64," + response;
+          $("#upscaled-image-container").html(
+          "<img src='" + imageSrc + "' alt='Upscaled Image'>"
+          );
+          $("#download-link").attr("href", imageSrc);
+          $("#download-link").attr("download", "upscaled_image.jpg");
+          $("#download-button").css("display", "block");
+          $("#upscale-button").hide();
+          $(".upload-status").hide();
+          
+          var uploadedImageContainer = document.getElementById("uploaded-image-container");
+          uploadedImageContainer.innerHTML = "";
+          uploadedImageContainer.appendChild(uploadedImage);
+          $("#image-container").hide();
+          $("#uploaded-column").show();
+          },
+          error: function (error) {
+          console.log(error);
+          },
+          });
+          } else {
+          alert("Please upload an image first!");
+          }
+          });
+          
+          function downloadImage() {
+          var downloadLink = document.getElementById("download-link");
+          var imageSrc = downloadLink.getAttribute("href");
+          var fileName = downloadLink.getAttribute("download");
+          
+          var link = document.createElement("a");
+          link.href = imageSrc;
+          link.download = fileName;
+          link.target = "_blank";
+          link.click();
+          
+          document.body.appendChild(link);
+          link.click();
+          
+          setTimeout(function () {
+          URL.revokeObjectURL(link.href);
+          link.remove();
+          }, 100);
+          }
+          });
+          </script>
+      <script src="/static/JS/main.js"></script>
+  </body>
 </html>
